[package]
name = "node-modules-cleaner"
version = "0.1.0"
authors = ["KaranGauswami <karangauswami.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3.17"
failure="0.1.8"
exitfailure="0.5.1"
trash="1.1.1"