[package]
name = "node-cleaner"
version = "0.2.0"
authors = ["KaranGauswami <karangauswami.dev@gmail.com>"]
description = "Simple script to remove all the node modules from older projects"
repository = "https://github.com/KaranGauswami/node-cleaner"
keywords= ["node-modules","clean"]
edition = "2018"

[dependencies]
structopt="0.3.19"
failure="0.1.8"
exitfailure="0.5.1"
trash="1.1.1"
